--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,8 @@
-FLASK_ENV=development #or production
+
+APP_ENV=development #or production
 FLASK_DEBUG=1
-DATABASE_URL=postgresql://hello_flask:hello_flask@db:5432/hello_flask_dev
+DATABASE_PORT=5432
+DATABASE_URL=postgresql://hello_flask:hello_flask@db:$DATABASE_PORT/hello_flask_dev
+
+
 
