--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 
+
 version: "3.9"
 name: "flaskApp1"
 services:
@@ -21,7 +22,7 @@ services:
   db:
     image: postgres:13-alpine
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data/
+      - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=hello_flask
       - POSTGRES_PASSWORD=hello_flask
@@ -34,3 +35,4 @@ services:
           memory: 256M
 volumes:
   postgres_data:
+
